<resources>
    <string name="app_name">FinalPaper</string>
    <string name="home">Home</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="updateProfile">Update Profile</string>
    <string name="ProfileManagement">Profile Management</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="editProfile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="gender">Gender</string>
    <string name="users">All Users</string>
    <string name="enterName">Enter Name</string>
</resources>