<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editProfile"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSearchEP"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/search"
        android:text="@string/search" />

    <EditText
        android:id="@+id/etDobEP"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/dateOfBirth"
        android:inputType="date" />

    <EditText
        android:id="@+id/etPasswordEP"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEditEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btnDeleteEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>